--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,29 +5,31 @@ on:
     branches: main
   pull_request:
 
+env:
+  NODE_VERSION: 14.x
+
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2-beta
+      - uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: ${{ env.NODE_VERSION }}
       - name: Install dependencies
         run: npm install
       - name: Run ESLint
         run: npm run eslint
-      - name: Check types
-        run: npm run check-types
   # test:
   #   runs-on: ubuntu-latest
   #   strategy:
   #     matrix:
-  #       node-version: [12.x, 14.x]
+  #       node-version: [14.x, 15.x]
+  #     fail-fast: false
   #   steps:
   #     - uses: actions/checkout@v2
   #     - name: Use Node.js ${{ matrix.node-version }}
-  #       uses: actions/setup-node@v2-beta
+  #       uses: actions/setup-node@v2
   #       with:
   #         node-version: ${{ matrix.node-version }}
   #     - name: Install dependencies
