--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "clean": "rimraf lib",
     "check-types": "tsc --noEmit",
-    "eslint": "eslint providers src --ext ts",
+    "eslint": "eslint providers src",
     "eslint-fix": "npm run eslint -- --fix",
     "prepublishOnly": "npm run tsc",
     "test-only": "jest",
@@ -45,31 +45,24 @@
     "preset": "ts-jest",
     "testEnvironment": "node"
   },
-  "prettier": {
-    "arrowParens": "always",
-    "semi": true,
-    "singleQuote": true,
-    "tabWidth": 2,
-    "trailingComma": "all"
-  },
   "peerDependencies": {
-    "@adonisjs/core": "^5.0.4-preview-rc-2",
+    "@adonisjs/core": "*",
     "react": "*",
     "react-dom": "*"
   },
   "devDependencies": {
-    "@adonisjs/core": "^5.0.4-preview-rc-2",
-    "@types/jest": "^26.0.15",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
-    "@zakodium/eslint-config": "^2.1.4",
-    "eslint": "^7.13.0",
+    "@adonisjs/core": "^5.0.5-canary-rc-2",
+    "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@zakodium/eslint-config": "^3.0.0",
+    "eslint": "^7.20.0",
     "jest": "^26.6.3",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.0.5"
+    "ts-jest": "^26.5.1",
+    "typescript": "^4.1.5"
   }
 }
